--- a/archives/toutiao-search/2023-11-04.md
+++ b/archives/toutiao-search/2023-11-04.md
@@ -1,59 +1,72 @@
 # 2023-11-04
 
-共 119 条
+共 125 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 04 2023 13:00:57 GMT+0800 (China Standard Time) -->
-1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
-1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
-1. [第六届进博会布展工作全部完成](https://so.toutiao.com/search?keyword=第六届进博会布展工作全部完成)
-1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
+<!-- 最后更新时间 Sat Nov 04 2023 14:00:39 GMT+0800 (China Standard Time) -->
+1. [神十六返回 宇航员的脸“肿么了”](https://so.toutiao.com/search?keyword=神十六返回+宇航员的脸“肿么了”)
 1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
-1. [美众议院通过促进对伊朗制裁法案](https://so.toutiao.com/search?keyword=美众议院通过促进对伊朗制裁法案)
+1. [第六届进博会布展工作全部完成](https://so.toutiao.com/search?keyword=第六届进博会布展工作全部完成)
 1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
-1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
+1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
+1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
+1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
 1. [蜜雪冰城回应店员被指歧视大专生](https://so.toutiao.com/search?keyword=蜜雪冰城回应店员被指歧视大专生)
+1. [广东一医院鼓励先收后退患者红包](https://so.toutiao.com/search?keyword=广东一医院鼓励先收后退患者红包)
 1. [巴以冲突外溢是否会影响石油价格](https://so.toutiao.com/search?keyword=巴以冲突外溢是否会影响石油价格)
 1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
 1. [天然气爆炸致多人死亡？警方辟谣](https://so.toutiao.com/search?keyword=天然气爆炸致多人死亡？警方辟谣)
-1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
-1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
-1. [真主党领导人首次公开表态巴以冲突](https://so.toutiao.com/search?keyword=真主党领导人首次公开表态巴以冲突)
-1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
-1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
-1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
-1. [哈马斯：准备就换俘问题完全妥协](https://so.toutiao.com/search?keyword=哈马斯：准备就换俘问题完全妥协)
 1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
+1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
+1. [普京：俄罗斯人要对巴以冲突清醒](https://so.toutiao.com/search?keyword=普京：俄罗斯人要对巴以冲突清醒)
+1. [哈马斯：准备就换俘问题完全妥协](https://so.toutiao.com/search?keyword=哈马斯：准备就换俘问题完全妥协)
+1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
+1. [民调：多数以色列人信军方不信总理](https://so.toutiao.com/search?keyword=民调：多数以色列人信军方不信总理)
+1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
+1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
 1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
-1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
-1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
 1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
+1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
 1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
 1. [《流浪地球3》定档2027年大年初一](https://so.toutiao.com/search?keyword=《流浪地球3》定档2027年大年初一)
+1. [真主党领导人首次公开表态巴以冲突](https://so.toutiao.com/search?keyword=真主党领导人首次公开表态巴以冲突)
 1. [以军发现并炸毁哈马斯隧道画面曝光](https://so.toutiao.com/search?keyword=以军发现并炸毁哈马斯隧道画面曝光)
-1. [文班亚马关键时刻扮演超级英雄](https://so.toutiao.com/search?keyword=文班亚马关键时刻扮演超级英雄)
+1. [学生称被校内蜜雪冰城老板孩子骚扰](https://so.toutiao.com/search?keyword=学生称被校内蜜雪冰城老板孩子骚扰)
 1. [多国批美西方在巴以冲突上存在双标](https://so.toutiao.com/search?keyword=多国批美西方在巴以冲突上存在双标)
-1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
-1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
-1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
+1. [雷霆主帅谈不敌勇士：很棒的比赛](https://so.toutiao.com/search?keyword=雷霆主帅谈不敌勇士：很棒的比赛)
+1. [陆治原不再担任青岛市委书记](https://so.toutiao.com/search?keyword=陆治原不再担任青岛市委书记)
 1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
-1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
-1. [以色列多地遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列多地遭火箭弹袭击)
 1. [哈马斯下属武装称打死4名以军士兵](https://so.toutiao.com/search?keyword=哈马斯下属武装称打死4名以军士兵)
-1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
+1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
 1. [支原体感染大暴发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大暴发或许是假象)
+1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
+1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
 1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
-1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [律师当街遭袭 浙江省律协启动维权](https://so.toutiao.com/search?keyword=律师当街遭袭+浙江省律协启动维权)
+1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
+1. [专家解读为何今年气温偏高](https://so.toutiao.com/search?keyword=专家解读为何今年气温偏高)
+1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
+1. [加军机抵近西沙称遭歼11发射干扰弹](https://so.toutiao.com/search?keyword=加军机抵近西沙称遭歼11发射干扰弹)
+1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
+1. [世卫组织对加沙救护车遭袭表示震惊](https://so.toutiao.com/search?keyword=世卫组织对加沙救护车遭袭表示震惊)
 1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
-1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
 1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
 1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
-1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
-1. [警方通报女子路怒咬掉男子一块肉](https://so.toutiao.com/search?keyword=警方通报女子路怒咬掉男子一块肉)
+1. [WTT冠军赛：王楚钦晋级四强](https://so.toutiao.com/search?keyword=WTT冠军赛：王楚钦晋级四强)
 1. [以军轰炸多家新闻机构在加沙办公室](https://so.toutiao.com/search?keyword=以军轰炸多家新闻机构在加沙办公室)
+1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
+1. [美众议院通过促进对伊朗制裁法案](https://so.toutiao.com/search?keyword=美众议院通过促进对伊朗制裁法案)
+1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
+1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
+1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
+1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
+1. [文班亚马关键时刻扮演超级英雄](https://so.toutiao.com/search?keyword=文班亚马关键时刻扮演超级英雄)
+1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
+1. [以色列多地遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列多地遭火箭弹袭击)
+1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
+1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
+1. [警方通报女子路怒咬掉男子一块肉](https://so.toutiao.com/search?keyword=警方通报女子路怒咬掉男子一块肉)
 1. [缅北“1027行动”超6200人流离失所](https://so.toutiao.com/search?keyword=缅北“1027行动”超6200人流离失所)
-1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
-1. [专家解读为何今年气温偏高](https://so.toutiao.com/search?keyword=专家解读为何今年气温偏高)
 1. [S13：BLG 3-2击败GEN晋级四强](https://so.toutiao.com/search?keyword=S13：BLG+3-2击败GEN晋级四强)
 1. [肺炎支原体感染已出现叠加感染](https://so.toutiao.com/search?keyword=肺炎支原体感染已出现叠加感染)
 1. [男子药店暴打女子 警方：两人是情侣](https://so.toutiao.com/search?keyword=男子药店暴打女子+警方：两人是情侣)
@@ -62,7 +75,6 @@
 1. [《西游记》毗蓝婆菩萨扮演者去世](https://so.toutiao.com/search?keyword=《西游记》毗蓝婆菩萨扮演者去世)
 1. [130多名医护人员倒在加沙的血泊中](https://so.toutiao.com/search?keyword=130多名医护人员倒在加沙的血泊中)
 1. [《以爱为营》白鹿郑舒环演情敌](https://so.toutiao.com/search?keyword=《以爱为营》白鹿郑舒环演情敌)
-1. [律师当街遭袭 浙江省律协启动维权](https://so.toutiao.com/search?keyword=律师当街遭袭+浙江省律协启动维权)
 1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
 1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
 1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
@@ -72,24 +84,18 @@
 1. [一眼赏“万花” 60秒看进博](https://so.toutiao.com/search?keyword=一眼赏“万花”+60秒看进博)
 1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
 1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
-1. [当事人回应获评助学金后仍举报](https://so.toutiao.com/search?keyword=当事人回应获评助学金后仍举报)
-1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
 1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
 1. [马斯克对话英国首相再次称赞中国AI](https://so.toutiao.com/search?keyword=马斯克对话英国首相再次称赞中国AI)
 1. [官方：年底实现全国范围开机看直播](https://so.toutiao.com/search?keyword=官方：年底实现全国范围开机看直播)
-1. [学生称被校内蜜雪冰城老板孩子骚扰](https://so.toutiao.com/search?keyword=学生称被校内蜜雪冰城老板孩子骚扰)
 1. [吉林一煤矿瞒报致4死事故36人被问责](https://so.toutiao.com/search?keyword=吉林一煤矿瞒报致4死事故36人被问责)
 1. [官方通报副市长与女同事暧昧：免职](https://so.toutiao.com/search?keyword=官方通报副市长与女同事暧昧：免职)
 1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
 1. [《以爱为营》郑书意时宴双向心动](https://so.toutiao.com/search?keyword=《以爱为营》郑书意时宴双向心动)
 1. [巴勒斯坦一记者及其11名亲属遇难](https://so.toutiao.com/search?keyword=巴勒斯坦一记者及其11名亲属遇难)
-1. [WTT冠军赛：王楚钦晋级四强](https://so.toutiao.com/search?keyword=WTT冠军赛：王楚钦晋级四强)
-1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
 1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
 1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
 1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
-1. [神十六返回 宇航员的脸“肿么了”](https://so.toutiao.com/search?keyword=神十六返回+宇航员的脸“肿么了”)
 1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
 1. [警方辟谣长沙岳麓山有人被拐去缅甸](https://so.toutiao.com/search?keyword=警方辟谣长沙岳麓山有人被拐去缅甸)
 1. [美穆斯林选民：不会再把票投给拜登](https://so.toutiao.com/search?keyword=美穆斯林选民：不会再把票投给拜登)
