--- a/archives/toutiao-search/2023-11-04.md
+++ b/archives/toutiao-search/2023-11-04.md
@@ -1,63 +1,76 @@
 # 2023-11-04
 
-共 156 条
+共 164 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 04 2023 17:00:43 GMT+0800 (China Standard Time) -->
-1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
-1. [广东一医院鼓励先收后退患者红包](https://so.toutiao.com/search?keyword=广东一医院鼓励先收后退患者红包)
-1. [第六届进博会布展工作全部完成](https://so.toutiao.com/search?keyword=第六届进博会布展工作全部完成)
-1. [湖南校车侧翻事故致6人受伤](https://so.toutiao.com/search?keyword=湖南校车侧翻事故致6人受伤)
-1. [中国工商银行原副行长张红力被查](https://so.toutiao.com/search?keyword=中国工商银行原副行长张红力被查)
-1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
+<!-- 最后更新时间 Sat Nov 04 2023 18:00:54 GMT+0800 (China Standard Time) -->
+1. [以色列总理称将全速推进战事](https://so.toutiao.com/search?keyword=以色列总理称将全速推进战事)
 1. [汝州卫健委回应拖欠医生工资：没钱](https://so.toutiao.com/search?keyword=汝州卫健委回应拖欠医生工资：没钱)
+1. [“进博老友”再度相约](https://so.toutiao.com/search?keyword=“进博老友”再度相约)
+1. [中国工商银行原副行长张红力被查](https://so.toutiao.com/search?keyword=中国工商银行原副行长张红力被查)
 1. [男子在药店殴打女友已被拘](https://so.toutiao.com/search?keyword=男子在药店殴打女友已被拘)
-1. [澳总理如何平衡中澳和美澳关系](https://so.toutiao.com/search?keyword=澳总理如何平衡中澳和美澳关系)
+1. [男孩被午托班男老师当街追打](https://so.toutiao.com/search?keyword=男孩被午托班男老师当街追打)
+1. [今年已有40个“老虎”落马](https://so.toutiao.com/search?keyword=今年已有40个“老虎”落马)
+1. [3类人需警惕秋冬季呼吸道高发疾病](https://so.toutiao.com/search?keyword=3类人需警惕秋冬季呼吸道高发疾病)
+1. [官方回应要求小学生戴头盔上下学](https://so.toutiao.com/search?keyword=官方回应要求小学生戴头盔上下学)
 1. [官方辟谣河南农户高粱被村民抢收](https://so.toutiao.com/search?keyword=官方辟谣河南农户高粱被村民抢收)
 1. [真主党领导人首次公开表态巴以冲突](https://so.toutiao.com/search?keyword=真主党领导人首次公开表态巴以冲突)
 1. [哈马斯：准备就换俘问题完全妥协](https://so.toutiao.com/search?keyword=哈马斯：准备就换俘问题完全妥协)
 1. [以色列警察继续加强主麻日管控](https://so.toutiao.com/search?keyword=以色列警察继续加强主麻日管控)
 1. [学者：巴以冲突联合国权威更显重要](https://so.toutiao.com/search?keyword=学者：巴以冲突联合国权威更显重要)
 1. [以总理：哈马斯不放人不会临时停火](https://so.toutiao.com/search?keyword=以总理：哈马斯不放人不会临时停火)
-1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
-1. [美不再允许军方高级领导人赴以色列](https://so.toutiao.com/search?keyword=美不再允许军方高级领导人赴以色列)
-1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
-1. [以色列多地遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列多地遭火箭弹袭击)
-1. [加沙地带多家医院濒临停运](https://so.toutiao.com/search?keyword=加沙地带多家医院濒临停运)
-1. [“以色列用AI猎杀哈马斯”背后疑团](https://so.toutiao.com/search?keyword=“以色列用AI猎杀哈马斯”背后疑团)
+1. [联合国：巴人道救援预计需12亿美元](https://so.toutiao.com/search?keyword=联合国：巴人道救援预计需12亿美元)
 1. [巴以冲突已致加沙3760名儿童死亡](https://so.toutiao.com/search?keyword=巴以冲突已致加沙3760名儿童死亡)
-1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
 1. [哈马斯下属武装称打死4名以军士兵](https://so.toutiao.com/search?keyword=哈马斯下属武装称打死4名以军士兵)
+1. [美不再允许军方高级领导人赴以色列](https://so.toutiao.com/search?keyword=美不再允许军方高级领导人赴以色列)
+1. [媒体：以色列“AI参战”引诸多疑问](https://so.toutiao.com/search?keyword=媒体：以色列“AI参战”引诸多疑问)
+1. [专家：哈马斯地道战或增加以军伤亡](https://so.toutiao.com/search?keyword=专家：哈马斯地道战或增加以军伤亡)
+1. [警方通报女子路怒咬掉男子一块肉](https://so.toutiao.com/search?keyword=警方通报女子路怒咬掉男子一块肉)
 1. [媒体人评库里：有些人本身就是体系](https://so.toutiao.com/search?keyword=媒体人评库里：有些人本身就是体系)
 1. [缅北混战：政治战下的生存之战](https://so.toutiao.com/search?keyword=缅北混战：政治战下的生存之战)
+1. [爱尔兰总理批评以色列加沙行动](https://so.toutiao.com/search?keyword=爱尔兰总理批评以色列加沙行动)
+1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
+1. [加沙医疗车队遭空袭 至少15人死亡](https://so.toutiao.com/search?keyword=加沙医疗车队遭空袭+至少15人死亡)
+1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
+1. [陆治原不再担任青岛市委书记](https://so.toutiao.com/search?keyword=陆治原不再担任青岛市委书记)
+1. [加沙北部至少25%建筑受损和被毁](https://so.toutiao.com/search?keyword=加沙北部至少25%建筑受损和被毁)
+1. [加沙卫生部门：14人南迁时遭袭身亡](https://so.toutiao.com/search?keyword=加沙卫生部门：14人南迁时遭袭身亡)
+1. [湖南校车侧翻事故致6人受伤](https://so.toutiao.com/search?keyword=湖南校车侧翻事故致6人受伤)
+1. [加沙民众喝脏水染病](https://so.toutiao.com/search?keyword=加沙民众喝脏水染病)
+1. [大连、青岛海上马拉松组委会被处罚](https://so.toutiao.com/search?keyword=大连、青岛海上马拉松组委会被处罚)
+1. [“蓝委”喊话侯友宜找韩国瑜当副手](https://so.toutiao.com/search?keyword=“蓝委”喊话侯友宜找韩国瑜当副手)
+1. [雷霆主帅谈不敌勇士：很棒的比赛](https://so.toutiao.com/search?keyword=雷霆主帅谈不敌勇士：很棒的比赛)
+1. [女子买星巴克杯身发现侮辱性字眼](https://so.toutiao.com/search?keyword=女子买星巴克杯身发现侮辱性字眼)
+1. [亲巴勒斯坦抗议者围堵美军运输船](https://so.toutiao.com/search?keyword=亲巴勒斯坦抗议者围堵美军运输船)
+1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
+1. [美众议院通过促进对伊朗制裁法案](https://so.toutiao.com/search?keyword=美众议院通过促进对伊朗制裁法案)
+1. [澳要求以方听到盟友敦促其克制呼声](https://so.toutiao.com/search?keyword=澳要求以方听到盟友敦促其克制呼声)
+1. [热依扎新剧硬刚恶婆婆](https://so.toutiao.com/search?keyword=热依扎新剧硬刚恶婆婆)
+1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
+1. [“以色列用AI猎杀哈马斯”背后疑团](https://so.toutiao.com/search?keyword=“以色列用AI猎杀哈马斯”背后疑团)
+1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
+1. [《以爱为营》郑书意时宴双向心动](https://so.toutiao.com/search?keyword=《以爱为营》郑书意时宴双向心动)
+1. [学生称被校内蜜雪冰城老板孩子骚扰](https://so.toutiao.com/search?keyword=学生称被校内蜜雪冰城老板孩子骚扰)
+1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
+1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
+1. [中超迎收官之战：大连人力争保级](https://so.toutiao.com/search?keyword=中超迎收官之战：大连人力争保级)
+1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
+1. [广东一医院鼓励先收后退患者红包](https://so.toutiao.com/search?keyword=广东一医院鼓励先收后退患者红包)
+1. [第六届进博会布展工作全部完成](https://so.toutiao.com/search?keyword=第六届进博会布展工作全部完成)
+1. [澳总理如何平衡中澳和美澳关系](https://so.toutiao.com/search?keyword=澳总理如何平衡中澳和美澳关系)
+1. [以色列多地遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列多地遭火箭弹袭击)
+1. [加沙地带多家医院濒临停运](https://so.toutiao.com/search?keyword=加沙地带多家医院濒临停运)
 1. [多国批美西方在巴以冲突上存在双标](https://so.toutiao.com/search?keyword=多国批美西方在巴以冲突上存在双标)
 1. [支原体感染大暴发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大暴发或许是假象)
-1. [官方回应昆明2名环卫工垃圾站身亡](https://so.toutiao.com/search?keyword=官方回应昆明2名环卫工垃圾站身亡)
-1. [女子买星巴克杯身发现侮辱性字眼](https://so.toutiao.com/search?keyword=女子买星巴克杯身发现侮辱性字眼)
-1. [加沙卫生部门否认哈马斯使用救护车](https://so.toutiao.com/search?keyword=加沙卫生部门否认哈马斯使用救护车)
-1. [“蓝委”喊话侯友宜找韩国瑜当副手](https://so.toutiao.com/search?keyword=“蓝委”喊话侯友宜找韩国瑜当副手)
-1. [3类人需警惕秋冬季呼吸道高发疾病](https://so.toutiao.com/search?keyword=3类人需警惕秋冬季呼吸道高发疾病)
-1. [雷霆主帅谈不敌勇士：很棒的比赛](https://so.toutiao.com/search?keyword=雷霆主帅谈不敌勇士：很棒的比赛)
-1. [以色列截留加沙地带资金](https://so.toutiao.com/search?keyword=以色列截留加沙地带资金)
 1. [《以爱为营》白鹿郑舒环演情敌](https://so.toutiao.com/search?keyword=《以爱为营》白鹿郑舒环演情敌)
-1. [美媒：以军消灭哈马斯所剩时间有限](https://so.toutiao.com/search?keyword=美媒：以军消灭哈马斯所剩时间有限)
-1. [警方通报女子路怒咬掉男子一块肉](https://so.toutiao.com/search?keyword=警方通报女子路怒咬掉男子一块肉)
-1. [大连、青岛海上马拉松组委会被处罚](https://so.toutiao.com/search?keyword=大连、青岛海上马拉松组委会被处罚)
-1. [美众议院通过促进对伊朗制裁法案](https://so.toutiao.com/search?keyword=美众议院通过促进对伊朗制裁法案)
-1. [加沙民众喝脏水染病](https://so.toutiao.com/search?keyword=加沙民众喝脏水染病)
-1. [《以爱为营》郑书意时宴双向心动](https://so.toutiao.com/search?keyword=《以爱为营》郑书意时宴双向心动)
 1. [86岁独居奶奶谈如何料理后事](https://so.toutiao.com/search?keyword=86岁独居奶奶谈如何料理后事)
 1. [以承认法新社加沙分社或受空袭波及](https://so.toutiao.com/search?keyword=以承认法新社加沙分社或受空袭波及)
 1. [以媒：泽连斯基下周将访问以色列](https://so.toutiao.com/search?keyword=以媒：泽连斯基下周将访问以色列)
 1. [大连人中超末轮海报致谢球迷](https://so.toutiao.com/search?keyword=大连人中超末轮海报致谢球迷)
 1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
 1. [媒体：泰山队要用胜利为联赛收尾](https://so.toutiao.com/search?keyword=媒体：泰山队要用胜利为联赛收尾)
-1. [库里最后0.2秒绝杀 勇士胜雷霆](https://so.toutiao.com/search?keyword=库里最后0.2秒绝杀+勇士胜雷霆)
 1. [超百万人从加沙北部被驱赶到南部](https://so.toutiao.com/search?keyword=超百万人从加沙北部被驱赶到南部)
-1. [陆治原不再担任青岛市委书记](https://so.toutiao.com/search?keyword=陆治原不再担任青岛市委书记)
-1. [官方回应要求小学生戴头盔上下学](https://so.toutiao.com/search?keyword=官方回应要求小学生戴头盔上下学)
 1. [WTT冠军赛：王楚钦晋级四强](https://so.toutiao.com/search?keyword=WTT冠军赛：王楚钦晋级四强)
-1. [亲巴勒斯坦抗议者围堵美军运输船](https://so.toutiao.com/search?keyword=亲巴勒斯坦抗议者围堵美军运输船)
 1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
 1. [华为“半导体封装”专利公布](https://so.toutiao.com/search?keyword=华为“半导体封装”专利公布)
 1. [库里赛后和霍姆格伦交换球衣](https://so.toutiao.com/search?keyword=库里赛后和霍姆格伦交换球衣)
@@ -72,10 +85,7 @@
 1. [民调：多数以色列人信军方不信总理](https://so.toutiao.com/search?keyword=民调：多数以色列人信军方不信总理)
 1. [曝拜登曾收亲以色列团体巨额捐款](https://so.toutiao.com/search?keyword=曝拜登曾收亲以色列团体巨额捐款)
 1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
-1. [加沙医疗车队遭空袭 至少15人死亡](https://so.toutiao.com/search?keyword=加沙医疗车队遭空袭+至少15人死亡)
-1. [学生称被校内蜜雪冰城老板孩子骚扰](https://so.toutiao.com/search?keyword=学生称被校内蜜雪冰城老板孩子骚扰)
 1. [官方回应律师遭对方当事人砸头袭击](https://so.toutiao.com/search?keyword=官方回应律师遭对方当事人砸头袭击)
-1. [加沙卫生部门：14人南迁时遭袭身亡](https://so.toutiao.com/search?keyword=加沙卫生部门：14人南迁时遭袭身亡)
 1. [杨坤回应演出结束后被打传闻](https://so.toutiao.com/search?keyword=杨坤回应演出结束后被打传闻)
 1. [130多名医护人员倒在加沙的血泊中](https://so.toutiao.com/search?keyword=130多名医护人员倒在加沙的血泊中)
 1. [神十六返回 宇航员的脸“肿么了”](https://so.toutiao.com/search?keyword=神十六返回+宇航员的脸“肿么了”)
@@ -94,7 +104,6 @@
 1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
 1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
 1. [以军轰炸多家新闻机构在加沙办公室](https://so.toutiao.com/search?keyword=以军轰炸多家新闻机构在加沙办公室)
-1. [柯文哲称愿对蓝白合民调方案让步](https://so.toutiao.com/search?keyword=柯文哲称愿对蓝白合民调方案让步)
 1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
 1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
 1. [文班亚马关键时刻扮演超级英雄](https://so.toutiao.com/search?keyword=文班亚马关键时刻扮演超级英雄)
@@ -110,7 +119,6 @@
 1. [《西游记》毗蓝婆菩萨扮演者去世](https://so.toutiao.com/search?keyword=《西游记》毗蓝婆菩萨扮演者去世)
 1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
 1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
-1. [德国禁止举办支持哈马斯活动](https://so.toutiao.com/search?keyword=德国禁止举办支持哈马斯活动)
 1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
 1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
 1. [以军加沙行动已致9061人死亡](https://so.toutiao.com/search?keyword=以军加沙行动已致9061人死亡)
